[tool.poetry]
name = "nova-api"
version = "0.1.0"
description = "☄️ NovaAI API - user/API key management, AI provider load balancing, reverse & forward proxy (lists) with SOCKS5 and async support, and many more features!"
authors = ["NovaOSS <owner@nova-oss.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
