[tool.poetry]
name = "nova-api"
version = "0.1.0"
description = "☄️ NovaAI API - user/API key management, AI provider load balancing, reverse & forward proxy (lists) with SOCKS5 and async support, and many more features!"
authors = ["NovaOSS <owner@nova-oss.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = {extras = ["http2"], version = "^0.25.0"}
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
motor = "^3.3.1"
openai = "^0.28.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
rich = "^13.5.3"
tiktoken = "^0.5.1"
slowapi = "^0.1.8"
orjson = "^3.9.7"
aiocache = "^0.12.2"
profanity-check = {git = "https://github.com/vzhou842/profanity-check.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
